--- a/exercicios/aula15/styles/style.css
+++ b/exercicios/aula15/styles/style.css
@@ -20,12 +20,22 @@ header > h1 {
 section {
     display: block;
     margin: auto;
-    width: 500px;
-    height: 400px;
+    width: 600px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.363);
+    padding: 15px;
 }
+
+div, p, input {
+    padding:5px;
+    margin: 3px 0px;
+}
+
+#res {
+    text-align: center;
+}
+
 
 footer {
     color: white;
