--- a/desafios/desafio03/styles/style.css
+++ b/desafios/desafio03/styles/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    font: normal 20px Arial;
+    font: normal 18px Arial;
 }
 
 body {
@@ -21,10 +21,19 @@ section {
     display: block;
     margin: auto;
     width: 500px;
-    height: 400px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.363);
+    
+}
+
+div {
+    padding: 15px;
+}
+
+input[type=button] {
+    padding: 2px;
+    font-size: 0.9em;
 }
 
 footer {
