--- a/desafios/desafio04/styles/style.css
+++ b/desafios/desafio04/styles/style.css
@@ -28,12 +28,8 @@ section {
     padding: 10px;
 }
 
-div#disp {
-    max-width: 200px;
-    max-height: 150px;
-    margin-top: 10px;
-    border: 1px solid black;
-     ;
+div#tabuada {
+    margin-top: 25px;
 }
 
 .btn {
